“fixed bugs svn 2018

--- a/Code/python/Py/FastCAE.ini
+++ b/Code/python/Py/FastCAE.ini
@@ -1,11 +1,5 @@
-[Path]
-WorkingDir=F:/FastCAE/04_Code/output/bin/../WorkingDir/
-
 [Language]
 Language=Chinese
-
-[Recent]
-RecentFile=F:/FastCAE/04_Code/output/WorkingDir/dianluban.diso, F:/FastCAE/04_Code/output/WorkingDir/plat.diso, F:/FastCAE/04_Code/output/WorkingDir/0427.diso, F:/FastCAE/04_Code/output/WorkingDir/P1.diso, F:/FastCAE/04_Code/output/WorkingDir/hh1.diso
 
 [License]
 Path=
@@ -38,3 +32,8 @@ ShowMode=Normal:Yes|Warning:Yes|Error:Yes
 ShowType=Yes
 ShowTime=No
 FontPts=9
+
+[GeometryDisplay]
+ShowPoint=false
+ShowEdge=true
+ShowSurface=true
