--- a/Code/CMakeLists.txt
+++ b/Code/CMakeLists.txt
@@ -146,7 +146,10 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 	FILE(GLOB FASTCAE_OCC_SOS_0 "${FASTCAE_OCC_SO_DIR}/*.so")
 	FILE(GLOB FASTCAE_OCC_SOS_1 "${FASTCAE_OCC_SO_DIR}/*.so.7")	
 	FILE(GLOB FASTCAE_OCC_SOS_2 "${FASTCAE_OCC_SO_DIR}/*.so.7.5.0")	
-	FILE(GLOB FASTCAE_CGNS_SOS "${FASTCAE_CGNS_SO_DIR}/*.so")
+	FILE(GLOB FASTCAE_CGNS_SOS_0 "${FASTCAE_CGNS_SO_DIR}/*.so")
+	FILE(GLOB FASTCAE_CGNS_SOS_1 "${FASTCAE_CGNS_SO_DIR}/*.so.4.2")	
+	FILE(GLOB FASTCAE_CGNS_SOS_2 "${FASTCAE_CGNS_SO_DIR}/*.so.200")
+	FILE(GLOB FASTCAE_CGNS_SOS_3 "${FASTCAE_CGNS_SO_DIR}/*.so.200.0.0")
 	FILE(GLOB FASTCAE_QUAZIP_SOS_0 "${FASTCAE_QUAZIP_SO_DIR}/*.so")
 	FILE(GLOB FASTCAE_QUAZIP_SOS_1 "${FASTCAE_QUAZIP_SO_DIR}/*.so.1")
 	FILE(GLOB FASTCAE_QUAZIP_SOS_2 "${FASTCAE_QUAZIP_SO_DIR}/*.so.1.0")
@@ -161,7 +164,10 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 			  ${FASTCAE_VTK_SOS_2}	 
 			  ${FASTCAE_OCC_SOS_1}
 			  ${FASTCAE_OCC_SOS_2}	
-			  ${FASTCAE_CGNS_SOS}			  
+			  ${FASTCAE_CGNS_SOS_0}			  
+			  ${FASTCAE_CGNS_SOS_1}			  
+			  ${FASTCAE_CGNS_SOS_2}	
+			  ${FASTCAE_CGNS_SOS_3}		  
 			  ${FASTCAE_QUAZIP_SOS_1}
 			  ${FASTCAE_QUAZIP_SOS_2}
 			  ${FASTCAE_PYS}
