--- a/Code/HeuDataSrcIO/CMakeLists.txt
+++ b/Code/HeuDataSrcIO/CMakeLists.txt
@@ -152,8 +152,8 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 	IF(NOT DEFINED FASTCAE_OCC_SOS_0)		
 		FILE(GLOB FASTCAE_OCC_SOS_0 "${FASTCAE_OCC_SO_DIR}/*.so")
 	ENDIF()
-	IF(NOT DEFINED FASTCAE_CGNS_SOS)		
-		FILE(GLOB FASTCAE_CGNS_SOS "${FASTCAE_CGNS_SO_DIR}/*.so")
+	IF(NOT DEFINED FASTCAE_CGNS_SOS_0)		
+		FILE(GLOB FASTCAE_CGNS_SOS_0 "${FASTCAE_CGNS_SO_DIR}/*.so")
 	ENDIF()
 	
 	FOREACH(FASTCAE_VTK_SO_0 ${FASTCAE_VTK_SOS_0})
@@ -162,8 +162,8 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 	FOREACH(FASTCAE_OCC_SO_0 ${FASTCAE_OCC_SOS_0})
 		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_OCC_SO_0})
 	ENDFOREACH()
-	FOREACH(FASTCAE_CGNS_SO ${FASTCAE_CGNS_SOS})
-		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_CGNS_SO})
+	FOREACH(FASTCAE_CGNS_SO_0 ${FASTCAE_CGNS_SOS_0})
+		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_CGNS_SO_0})
 	ENDFOREACH()	
 	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/libSolutionDataIO${CMAKE_DEBUG_POSTFIX}.so" optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/libSolutionDataIO${CMAKE_RELEASE_POSTFIX}.so")	
 ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
