--- a/Code/PluginMeshDataExchange/CMakeLists.txt
+++ b/Code/PluginMeshDataExchange/CMakeLists.txt
@@ -111,15 +111,15 @@ IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
 	IF(NOT DEFINED FASTCAE_VTK_SOS_0)
 		FILE(GLOB FASTCAE_VTK_SOS_0 "${FASTCAE_VTK_SO_DIR}/*.so")
 	ENDIF()
-	IF(NOT DEFINED FASTCAE_CGNS_SOS)		
-		FILE(GLOB FASTCAE_CGNS_SOS "${FASTCAE_CGNS_SO_DIR}/*.so")
+	IF(NOT DEFINED FASTCAE_CGNS_SOS_0)		
+		FILE(GLOB FASTCAE_CGNS_SOS_0 "${FASTCAE_CGNS_SO_DIR}/*.so")
 	ENDIF()
 	
 	FOREACH(FASTCAE_VTK_SO_0 ${FASTCAE_VTK_SOS_0})
 		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_VTK_SO_0})
 	ENDFOREACH()
-	FOREACH(FASTCAE_CGNS_SO ${FASTCAE_CGNS_SOS})
-		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_CGNS_SO})
+	FOREACH(FASTCAE_CGNS_SO_0 ${FASTCAE_CGNS_SOS_0})
+		TARGET_LINK_LIBRARIES(${PROJECTNAME} ${FASTCAE_CGNS_SO_0})
 	ENDFOREACH()		
 	TARGET_LINK_LIBRARIES(${PROJECTNAME} debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libMainWindow${CMAKE_DEBUG_POSTFIX}.so"      optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libMainWindow${CMAKE_RELEASE_POSTFIX}.so"
 										 debug "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG}/../libSelfDefObject${CMAKE_DEBUG_POSTFIX}.so"   optimized "${CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE}/../libSelfDefObject${CMAKE_RELEASE_POSTFIX}.so"
